--- a/demo/templates/contacts/login.html
+++ b/demo/templates/contacts/login.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page</title>
+    {% block title %}<title>Login</title>{% endblock %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/contacts/login.css' %}">
 </head>
@@ -20,9 +20,7 @@
                 <input type="password" placeholder="Password" name="password">
                 <button class="btn btn-danger">Submit</button>
             </h3><br>
-            {% if error %}
-                <p class="fade-out">{{error}}</p>
-            {% endif %}
+            <p>{{error_msg}}</p>
         </form>
     </div>
 </body>
